--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
     </div>
     </header>
-    <section>
+    <section id="sports">
         <div class="container">
             <h2>Esportes</h2>
             <div class="articles"><article>
@@ -58,17 +58,6 @@
             <article>
                 <img src="./imagens/basquete.jpg" title="Vista aérea de uma quadra de basquete" />
                 <header>
-                    <time>13/07/2022 às 12:35</time>
-                </header>
-                <h3>Notícia sobre a NBA</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
-                </p>
-                <a href="#" title="Leia a notícia completa">Ler mais</a>
-            </article>
-            <article>
-                <img src="./imagens/basquete.jpg" title="Vista aérea de uma quadra de basquete" />
-                <header>
                     <time>10/11/2024 as 21:30</time>
                 </header>
                 <h3>Notícia sobre a NBA</h3>
@@ -78,7 +67,7 @@
                 <a href="#" title="Leia a notícia completa">Ler mais</a>
             </article></div>
     </section>
-    <section>
+    <section id="economy">
     <div class="container">
             <h2>Economia</h2>
             <div class="articles"><article>
@@ -113,16 +102,8 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
                 </p>
                 <a href="#" title="Leia a notícia completa">Ler mais</a>
-                    <img src="./imagens/euro.jpg" alt="Várias notas de euro" />
-                    <header>
-                        <time>10/11/2024 as 21:30</time>
-                    </header>
-                    <h3>Euro em queda de 0.40%</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
-                    </p>
-                    <a href="#" title="Leia a notícia completa">Ler mais</a>
-            <section>
+    </article></div>
+    <section id="nature">
                 <div class="container">
                     <h2>natureza</h2>
                     <div class="articles"><article>
@@ -134,11 +115,10 @@
                         <p>
                             ipsun Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus facere ab obcaecati aut voluptate nesciunt voluptates tempore. Ab, repellat! Sed, neque delectus. Odit atque consequatur voluptas explicabo tempora facere natus.
                             <a href="#" title="Leia a noticia completa">Ler mais</a>
-                        </p></article>
-                    </article></div>
+                        </p>
+                        </div>
             </section>
-    </section>
-    <section>
+    <section id="tecnology">
         <div class="container">
             <h2>Tecnologia</h2>
             <div class="articles"><article>
@@ -152,6 +132,5 @@
                     <a href="#" title="Leia a noticia completa">Ler mais</a>
                 </p></article>
             </article></div>
-    </section>
 </body>
 </html>
